Rename post path param from id to postId in simple examples
